--- a/desafio/desafio12/estilo/style.css
+++ b/desafio/desafio12/estilo/style.css
@@ -1,10 +1,34 @@
 @charset "UTF-8";
 
+@font-face {
+    font-family: 'Sriracha' ;
+    src: url('../fontes/Sriracha-Regular.ttf');
+    font-weight: normal;
+}
+@font-face {
+    font-family:'GreatVibes' ;
+    src: url('../fontes/GreatVibes-Regular.ttf');
+    font-weight: normal;
+}
+@font-face {
+    font-family:'BebasNeue' ;
+    src: url('../fontes/BebasNeue-Regular.ttf');
+    font-weight: normal;
+}
 
+
+
+:root{
+    --fonte1: 'Sriracha';
+    --fonte2: 'GreatVibes';
+    --fonte3: 'BebasNeue';
+
+}
 
 *{
     margin: 0px;
     padding: 0px;
+    
 }
 
 html, body{
@@ -15,11 +39,14 @@ html, body{
 header{
     background-color: black;
     color: white;
-    text-align: center;
+    text-align: center ;
+   
 }
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte1);
+    font-size: 10vw;
 }
 header > p{
    padding-bottom: 50px;
@@ -37,6 +64,12 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte1);
+    font-size: 2vw;
+   
+    
+
+
 
 }
 
@@ -51,7 +84,8 @@ section.imagem{
 
 }
 section.imagem > p{
-    width: 300px;
+   display: inline-block;
+   padding: 30px;
     background-color: rgba(0, 0, 0, 0.144);
 }
 
@@ -59,6 +93,9 @@ footer{
     background-color: black;
     text-align: center;
     font-variant: inherit;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    
 }
 footer > p{
     color: white;
